--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_BASE_URL= https://6556-110-225-81-204.ngrok-free.app
+REACT_APP_BASE_URL= https://93c5-2401-4900-81ec-ba18-c9ed-4d4f-943f-894.ngrok-free.app/api
+# REACT_APP_BASE_URL= http://localhost:3434/api
